Refactor `StandardParagraph` and `WmlUtils` to simplify method structures, remove redundant code, and improve formatting consistency.